# Trading-System

./: .Cargo.toml.swp  .gitignore  Cargo.toml  README.md  progress.md  psuedocode_arch.txt  startup_sequence.txt  var_files.txt  varfile_specifications.txt
2.0/: interval_options  main.py
data/: 10minutechunk.csv  depth_snapshot.json
docs/: PMSystem.txt  operations.txt  psuedocode_arch.txt  variables.txt
src/: binance_stream.rs  main.rs  streamr.rs
trading_system/: Cargo.toml  trading_cli_documentation.txt
trading_system/src/: binance_interface.rs  binance_stream.rs  binance_structs.rs  helpers.rs  main.rs  trading_strategies.rs
trading_system/src/strategies/: adx.rs  ema_sma_adx.rs  ema_sma_crossover.rs  mod.rs  sma_crossover.rs  strategy_template.rs
trading_system/src/strategies/indicators/: adx_indicator.rs  max_in_range.rs  min_in_range.rs  mod.rs
