[package]
name = "trading_system"
version = "0.1.0"
authors = ["Jimmy Kang <jimmykang1016@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
url = "2.1.1"
json = "0.12.4"
colour = "0.5.0"
csv = "1.1.3"
curl = "0.4.29"
serde_json = "1.0"
